# termus

./: .clang-format  .gitignore  CHANGELOG.md  GNUmakefile  Makefile.am  README.md  configure.ac
.github/: ISSUE_TEMPLATE.md
.github/workflows/: build.yml
data/: Makefile.am  default.theme  green-mono-88.theme  green.theme  gruvbox-alt.theme  gruvbox-warm.theme  gruvbox.theme  rc  solarized-dark.theme  solarized-light.theme
docs/: README.md  architecture.md  codecs.md  contributing.md  development.md  project-structure.md  runtime.md  tui.md
man/: Makefile.am  termus-remote.txt  termus-tutorial.txt  termus.txt  termusc.txt  ttman.c
scripts/: gen_decomp.py
src/: Makefile.am
src/app/: cmdline.c  cmdline.h  commands.h  main.c  options_core.c  options_core.h  options_core_state.c  options_core_state.h  options_defaults.c  options_defaults.h  options_library.c  options_library.h  options_library_state.c  options_library_state.h  options_loader.c  options_loader.h  options_misc.c  options_misc.h  options_parse.c  options_parse.h  options_persist.c  options_playback.c  options_playback.h  options_playback_state.c  options_playback_state.h  options_plugins.c  options_plugins.h  options_registry.h  options_store.c  options_ui_state.c  options_ui_state.h  resume.c  resume.h  search_state.h  termus.c  termus.h
src/common/: compiler.h  debug.c  debug.h  file.c  file.h  gbuf.c  gbuf.h  glob.c  glob.h  iter.h  list.h  locale.c  locale.h  locking.c  locking.h  mergesort.c  mergesort.h  misc.c  misc.h  msg.c  msg.h  path.c  path.h  prog.c  prog.h  rbtree.c  rbtree.h  read_wrapper.c  read_wrapper.h  spawn.c  spawn.h  u_collate.c  u_collate.h  uchar.c  uchar.h  unidecomp.h  utils.h  wcwidth_uchar.h  worker.c  worker.h  (+4 more)
src/core/: buffer.c  buffer.h  channelmap.c  channelmap.h  comment.c  comment.h  convert.c  convert.h  cue_utils.c  cue_utils.h  discid.c  discid.h  history.c  history.h  http.c  http.h  id3.c  id3.h  input.c  input.h  ip.h  keyval.c  keyval.h  mixer.h  op.h  output.c  output.h  pcm.c  pcm.h  player.c  player.h  sf.h  track.c  track.h  track_info.c  track_info.h  track_info_cb.h
src/ipc/: mpris.c  mpris.h  server.c  server.h
src/plugins/input/: Makefile.am  aac.c  aac.h  avcodec.c  bass.c  cdio.c  cue.c  ffmpeg.c  flac.c  mad.c  mikmod.c  modplug.c  mp4.c  mpc.c  mpg123.c  nomad.c  nomad.h  opus.c  vorbis.c  vtx.c  wav.c  wavpack.c
src/plugins/output/: Makefile.am  aaudio.c  alsa.c  ao.c  arts.c  coreaudio.c  jack.c  mixer_alsa.c  mixer_oss.c  mixer_sun.c  oss.c  pipewire.c  roar.c  sndio.c  sun.c  waveout.c
src/ui/: browser.c  browser.h  command_mode.c  command_mode.h  curses_compat.h  editable_view.c  editable_view.h  format_print.c  format_print.h  help.c  help.h  job.c  job.h  keys.c  keys.h  options.c  options_display.c  options_display.h  options_hooks.c  options_hooks.h  options_ui.c  options_ui.h  popup.c  popup.h  search_mode.c  search_mode.h  tabexp.c  tabexp.h  tabexp_file.c  tabexp_file.h  ui.h  ui_curses.c  ui_curses.h  ui_utils.c  ui_utils.h  window.c  window.h
tests/: Makefile.am  test_locale.c  test_options.c  test_path.c  test_player_logic.c
